@@ -60,9 +60,15 @@ sessions.  The goal of this library is to abstract away all of the
 underlying IPMI/SOL details away from the user into a relatively
 simple file descriptor interface.
 
+Alternate default configuration value can be set for
+.B Libipmiconsole
+via the libipmiconsole.conf file.  See
+. B libipmiconsole.conf(5)
+for more information.
 
 .SH "FILES"
 /usr/include/ipmiconsole.h
+@LIBIPMICONSOLE_CONFIG_FILE_DEFAULT@
 
 #include <@top_srcdir@/man/manpage-common-reporting-bugs.man>
 .SH COPYRIGHT
@@ -71,5 +77,5 @@ Copyright (C) 2007-2014 Lawrence Livermore National Security, LLC.
 Copyright (C) 2006-2007 The Regents of the University of California.
 #include <@top_srcdir@/man/manpage-common-gpl-library-text.man>
 .SH "SEE ALSO"
-ipmiconsole(8)
+libipmiconsole.conf(5), ipmiconsole(8)
 #include <@top_srcdir@/man/manpage-common-homepage.man>
